# GpuScienceLab

./: CMakeLists.txt  README.md
src/: GLView.cpp  GLView.h  MainWindow.cpp  MainWindow.h  SimulationCuda.cu  SimulationCuda.h  main.cpp
